# auto-paper

./: .gitignore  Cargo.toml
src/: api.rs  jar.rs  main.rs  maps.rs
