[package]
name = "auto-paper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.reqwest]
version = "0.11.16"
default-features = false
features = ["blocking", "default-tls", "json"]

[dependencies.serde]
version = "1.0.159"
default-features = false
features = ["derive"]

[profile.release]
lto = true